# kqlives

CVSROOT/: cvsignore  loginfo
KQ/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README_MINGW.txt  acinclude.m4  blurb  changes.txt  combat.c  combat.h  config.h.in  configure.ac  crap.h  draw.c  draw.h  effects.c  effects.h  enemyc.c  enemyc.h  entity.c  entity.h  eqpmenu.c  eqpmenu.h  eskill.c  eskill.h  fix.bat  fixbe.sh  fixosx.sh  fixunix.sh  heroc.c  heroc.h  hskill.c  hskill.h  intrface.c  intrface.h  itemdefs.h  itemmenu.c  itemmenu.h  kq.c  (+28 more)
KQ-web/: FAQ.html  FAQ.shtml  KQ.htm  KQ.html  TEMPLATE.shtml  about.shtml  developers.shtml  download.html  download.shtml  footer.html  header.html  index.html  index.shtml  kq.css  last-KQ.html  last-but-one-KQ.html  locations.shtml  navigation_bar.html  news.html  news.shtml  shots.html  shots.shtml
KQ/KQ-Linux.kdevelop/: Doxyfile  KQ.kdevelop  KQ.kdevses
KQ/KQ-osx.pbproj/: peterhull.pbxuser  project.pbxproj
KQ/KQ-osx.xcodeproj/: project.pbxproj
KQ/Mac/: README.rtf
KQ/data/: allstat.mon  cvswrappers  resabil.mon  tileset.kq
KQ/debian/: kq.6
KQ/include/: bounds.h  combat.h  console.h  credits.h  disk.h  draw.h  effects.h  enemyc.h  entity.h  enums.h  eqpmenu.h  eskill.h  fade.h  heroc.h  hskill.h  intrface.h  itemdefs.h  itemmenu.h  kq.h  kqsnd.h  magic.h  markers.h  masmenu.h  menu.h  movement.h  mpcx.h  music.h  platform.h  progress.h  res.h  scrnshot.h  selector.h  setup.h  sgame.h  shopmenu.h  skills.h  ssprites.h  structs.h  timing.h
KQ/maps/: Changes.txt  Incave.pcx  Misc.pcx  bridge.map  bridge2.map  camp.map  castle.pcx  cave1.map  cave2.map  cave3a.map  cave3b.map  cave4.map  cave5.map  cave6a.map  cave6b.map  coliseum.map  cult.map  cvswrappers  dville.map  entities.pcx  estate.map  fort.map  fortress.pcx  goblin.map  grotto.map  grotto2.map  guild.map  land.pcx  main.map  mainwindow.c  make.bat  makefile  manor.map  mapdata.c  mapdiff.c  mapdraw.c  mapdraw.h  mapdraw2.c  mapdraw2.glade  mapdraw2.h  (+26 more)
KQ/mkfiles/: makefile.all  makefile.be  makefile.cfg  makefile.dj  makefile.lnx  makefile.mgw  makefile.osx  makefile.unx  makefile.vc
KQ/music/: cvswrappers
KQ/other/: effects.csv  encount.csv  indent.pro  items.csv  kq2h.pl  res-skel.1.c  res-skel.2.c  res-skel.3.c  res-skel.4.c  res-skel.5.c  rescmp.c  spells.csv  tileset.txt
KQ/po/: Makefile.in.in  POTFILES.in  de.po  es.po  kq.pot
KQ/projects/devcpp/: KQ.dev  Makefile.win  README  lua.mak
KQ/projects/mingw-studio/: README  kq.msp
KQ/release/: kq.nsi  make-release.sh
KQ/saves/: sgupdate.c
KQ/scripts/: Makefile.am  allsc.txt  bridge.lua  bridge2.lua  camp.lua  cave1.lua  cave2.lua  cave3a.lua  cave3b.lua  cave4.lua  cave5.lua  cave6a.lua  cave6b.lua  coliseum.lua  comp.bat  compall.sh  cult.lua  dville.lua  estate.lua  esteria.lua  fort.lua  global.lua  goblin.lua  grotto.lua  grotto2.lua  guild.lua  init.lua  itemdefs.h  main.lua  makefile  manor.lua  pass.lua  preall.sh  prep.pl  progress.h  shrine.lua  starting.lua  sunarin.lua  temple1.lua  temple2.lua  (+10 more)
KQ/scripts/pscripts/: bridge.lua  camp.lua  cave1.lua  cave2.lua  cave3a.lua  cave3b.lua  cave4.lua  cheat.lua  coliseum.lua  cult.lua  dville.lua  estate.lua  fort.lua  grotto.lua  grotto2.lua  guild.lua  main.lua  manor.lua  pass.lua  starting.lua  temple1.lua  temple2.lua  tower.lua  town1.lua  town2.lua  town3.lua  town4.lua  town5.lua  town6.lua  town7.lua
KQ/src/: ChangeLog  beos.c  bounds.c  combat.c  console.c  credits.c  disk.c  dos.c  draw.c  effects.c  enemyc.c  entity.c  eqpmenu.c  eskill.c  fade.c  heroc.c  hskill.c  intrface.c  itemmenu.c  kq.c  magic.c  markers.c  masmenu.c  menu.c  movement.c  music.c  music_dumb.c  music_jgmod.c  osx.m  res.c  scrnshot.c  selector.c  setup.c  sgame.c  shopmenu.c  timing.c  unix.c  win.c
KQ/src/misc/: runner.c
